[package]
name = "gluster"
description = "A library to interface with Gluster's CLI.  This is being leveraged by a Juju charm to manage a Gluster deployment"
documentation = "https://cholcombe973.github.io/Gluster/gluster/index.html"
version = "1.0.4"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
repository = "https://github.com/cholcombe973/Gluster"
license = "MIT"

[dependencies]
byteorder = "~1.2"
lazy_static = "~1.1"
log = "~0.4"
regex = "~1.0"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
serde-xml-rs = "~0.2"
unix_socket = "~0.5"
uuid = {version = "0.6", features = ["v4", "std", "serde"]}
