[package]
name = "gluster"
description = "A library to interface with Gluster's CLI.  This is being leveraged by a Juju charm to manage a Gluster deployment"
documentation = "https://cholcombe973.github.io/Gluster/gluster/index.html"
version = "2.0.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
repository = "https://github.com/cholcombe973/Gluster"
license = "MIT"
categories = ["filesystem"]

[dependencies]
byteorder = "~1.2"
log = "~0.4"
nom = "~4.1"
regex = "~1.1"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
serde-xml-rs = "~0.2"
unix_socket = "~0.5"
uuid = {version = "~0.7", features = ["v4", "std", "serde"]}
